/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Main.java to edit this template
 */
package eva2_8_abstract;

/**
 *
 * @author elvat
 */
public class EVA2_8_ABSTRACT {

    /**
     * @param args the command line arguments
     */
    public static void main(String[] args) {
        
    }
    
}
