/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package eva2_8_abstract;

/**
 *
 * @author elvat
 */
abstract public class Figuras {
    
    // Una clase abstracta no permite crear objetos
    // Una clase abstracta puede tener cero o mas metodos
    // Abstractos
    // Un metodo abstracto es un metodo si implementacion
    
    abstract public double calcularArea();
    abstract public double calcularPerimetro();
}
